@@ -1,5 +1,6 @@
 post-v1.10.0
 ---------------------
+    - Stable bond mode has been removed.
 
 
 v1.10.0 - xx xxx xxxx
